--- a/css/compiled.css
+++ b/css/compiled.css
@@ -623,6 +623,15 @@ nav .navmenu {
 .content h1, .content h2, .content h3, .content h4, .content h5, .content h6 {
   margin-top: 32px; }
 
+.header-anchor {
+  opacity: 0;
+  transition: all 0.2s ease;
+  text-decoration: none;
+  font-size: 80%; }
+
+h1:hover .header-anchor, h2:hover .header-anchor, h3:hover .header-anchor {
+  opacity: 1; }
+
 .article {
   max-width: var(--content-width); }
   .article header .article-title {
@@ -737,8 +746,9 @@ nav .navmenu {
     overflow-x: auto;
     font-size: 0.8em;
     line-height: 1.4em;
-    padding: 17px 30px;
-    box-shadow: inset 0px 7px 11px -7px rgba(35, 30, 30, 0.8); }
+    padding: 17px 25px;
+    box-shadow: inset 0px 7px 11px -7px rgba(35, 30, 30, 0.8);
+    border-left: solid 5px #4769c0; }
 
 table {
   position: relative;
