--- a/css/compiled.css
+++ b/css/compiled.css
@@ -622,10 +622,12 @@ h1:hover .header-anchor, h2:hover .header-anchor, h3:hover .header-anchor {
     position: relative;
     border: none;
     border-top: 1px solid rgba(0, 0, 0, 0.12);
-    margin-bottom: 30px;
+    margin: 30px 0;
     width: var(--content-width);
     position: relative;
     left: -30px; }
+  .article hr:first-of-type {
+    margin-top: 0; }
   .article .code-name {
     margin-bottom: -15px;
     color: #5faec1;
@@ -701,7 +703,6 @@ table {
   font-size: 13px;
   table-layout: auto;
   width: 100%;
-  margin-bottom: 40px;
   border-collapse: collapse;
   border-spacing: 0;
   font-size: 1em; }
